--- a/package.json
+++ b/package.json
@@ -8,27 +8,22 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "humrah",
-    "social",
-    "companion",
-    "api"
-  ],
-  "author": "Your Name",
+  "keywords": ["humrah", "social", "companion", "api"],
+  "author": "Humrah Team",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0",
+    "express-validator": "^7.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
-    "resend": "^6.6.0",
-    "validator": "^13.11.0"
+    "cloudinary": "^1.41.3",
+    "multer-storage-cloudinary": "^4.0.0",
+    "@getbrevo/brevo": "^2.2.0",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
