--- a/package.json
+++ b/package.json
@@ -8,20 +8,25 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["humrah", "social", "companion", "api"],
+  "keywords": [
+    "humrah",
+    "social",
+    "companion",
+    "api"
+  ],
   "author": "Humrah Team",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "@getbrevo/brevo": "^2.5.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.41.3",
-    "@getbrevo/brevo": "^2.2.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
