--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^7.2.0",
     "hdd": "^0.0.0",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
