--- a/package.json
+++ b/package.json
@@ -18,22 +18,15 @@
   "license": "ISC",
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
-    "@sentry/node": "^10.32.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.0",
-    "hdd": "^0.0.0",
-    "helmet": "^8.1.0",
-    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
-    "multer": "^1.4.5-lts.1",
-    "rate-limit-mongo": "^2.3.2"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
