--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.21.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7"
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
