--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "humrah",
     "social",
     "companion",
-    "api"
+    "api",
+    "firebase",
+    "fcm"
   ],
   "author": "Humrah Team",
   "license": "ISC",
@@ -31,9 +33,14 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
+    "firebase-admin": "^12.0.0",
+    "axios": "^1.6.0",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
+     },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
