--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# Firebase
+config/firebase-service-account.json
+
 # yarn v3
 .pnp.*
 .yarn/*
