--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
+    "agora-access-token": "^2.0.4",
+    "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
@@ -27,19 +29,18 @@
     "express": "^4.22.1",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.0",
+    "firebase-admin": "^12.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.21.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
-    "firebase-admin": "^12.0.0",
-    "axios": "^1.6.0",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-     },
+  },
   "engines": {
     "node": ">=18.0.0"
   }
