--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "license": "ISC",
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
+    "@vladmandic/face-api": "^1.7.15",
     "agora-access-token": "^2.0.4",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.2.1",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -30,13 +32,16 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.0",
     "firebase-admin": "^12.7.0",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.21.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
-    "socket.io": "^4.8.3"
+    "sharp": "^0.34.5",
+    "socket.io": "^4.8.3",
+    "stream": "^0.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
