--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "postinstall": "node scripts/download-models.js",
+    "postinstall": "pip3 install face-recognition Pillow --break-system-packages || pip install face-recognition Pillow --break-system-packages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
